add dead and deprecated
